# Real-Time-VR-Ray-Tracing

./: .gitignore  CMakeLists.txt  Makefile  README.md
MinVR/tests-interactive/opengl-shaderpipeline/: CMakeLists.txt  main.cpp  parser.cpp
MinVR/tests-interactive/opengl-shaderpipeline/include/: camera.h  parser.h  shapes.h  utils.h
cmake/: FindMinVR.cmake
config/: HTC_Vive.minvr  compute.shader  config.h.in  desktop.minvr  ivlabcave.minvr  shader.frag  shader.vert
scenes/: arm-top.scn  bear.scn  env.scn  reflection.scn  single_sphere_dir.scn  test_scene.scn  triangle.scn
shaders/: .compute.shader.swp  compute.shader  compute2.shader  shader.frag
src/: bvh.cpp  main.cpp  parser.cpp  rayTracer.cpp
src/include/: bvh.h  camera.h  config.h  lights.h  material.h  parser.h  rayTracer.h  shapes.h  stb_image_write.h  utils.h
